# github-workflows

./: .gitignore  LICENSE.txt  README.md  REUSE.toml  bash-format.yml  bash-lint.yml  fsharp-build.yml  hoc-badge.yml  java-build.yml  java-infer-analysis.yml  java-release.yml  loc-badge.yml  markdown-lint.yml  python-duplication.yml  python-tests.yml  renovate.json  reuse.yml
.github/: zizmor.yml
.github/workflows/: action-lint-template.yml  action-lint-test.yml  action-lint.yml  action-security-template.yml  action-security-test.yml  action-security.yml  action-update-template.yml  action-update-test.yml  action-update.yml  all.yml  any-sonar-template.yml  any-sonar-test.yml  badge-hoc-template.yml  badge-hoc.yml  badge-loc-template.yml  badge-loc.yml  bash-format-template.yml  bash-format-test.yml  bash-format.yml  bash-lint-template.yml  bash-lint-test.yml  bash-lint.yml  c-cpp-build-template.yml  c-cpp-build-test.yml  c-cpp-build.yml  c-cpp-duplication-template.yml  c-cpp-duplication-test.yml  c-cpp-duplication.yml  c-cpp-release-template.yml  c-cpp-release-test.yml  c-cpp-release.yml  c-cpp-windows-build-template.yml  c-cpp-windows-build-test.yml  check-semver-tag-template.yml  check-semver-tag-test.yml  (+107 more)
action/: action-lint.yml  action-security.yml  action-update.yml
all/: action-lint.yml  action-security-template.yml  action-security.yml  codecov.yml  java-central-release.yml  java-coverage.yml  latex-lint.yml  latex-release-template.yml  markdown-lint.yml  python-release-template.yml  python-tests-template.yml  sass-duplication.yml  tag-semver-template.yml  ts-duplication-template.yml  ts-duplication.yml  typos.yml  xml-lint.yml  yaml-lint.yml
any/: any-sonar.yml
badge/: badge-hoc.yml  badge-loc.yml  hoc-badge.yml  loc-badge.yml
bash/: bash-format.yml  bash-lint.yml
c-cpp/: .gitignore  Makefile.am  c-cpp-build-linux.yml  c-cpp-build-macos.yml  c-cpp-build-windows.yml  c-cpp-build.yml  c-cpp-duplication.yml  c-cpp-macos-build.yml  c-cpp-release.yml  c-cpp-windows-build.yml  configure.ac
c-cpp/test/: Makefile.am  autogen.sh  configure.ac  hello-cpp.cpp
c-cpp/test/src/: Makefile.am  hello-cpp.cpp  hello.c
check/: check-semver-tag.yml
config/: .typos.toml  REUSE.toml  zizmor.yml
format/: css-duplication.yml  html-duplication.yml  markdown-lint.yml  sass-duplication.yml  scss-duplication.yml  xml-duplication.yml  xml-lint.yml  yaml-lint.yml
fsharp/: fsharp-build.yml
java/: hello.java  java-build-with-docker.yml  java-build.yml  java-central-release.yml  java-codecov.yml  java-coverage.yml  java-dependency-security.yml  java-duplication.yml  java-github-release.yml  java-infer-analysis.yml  java-infer.yml  java-release.yml  java-sonar.yml  java-sonatype-release.yml  pom.xml
js/: js-duplication.yml
latex/: Makefile  latex-build.yml  latex-lint.yml  latex-release.yml
license/: license-copyright.yml  license-reuse.yml
python/: Makefile  hello.py  python-duplication.yml  python-format.yml  python-lint.yml  python-release.yml  python-tests.yml  test_hello.py
semver/: tag-semver.yml
spell/: spell-lint.yml
ts/: ts-duplication.yml
xml/: xml-duplication.yml  xml-lint.yml
(+29 files in other folders)
